k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextstack-service
  namespace: nextstack
  labels:
    app: nextstack
spec:
  selector:
    app: nextstack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
